# gcn-esp8266

./: CMakeLists.txt  Makefile  README.md
arduino/: .gitignore  05_declarations.ino  06_global_variables.ino  08_cacerts.ino  08_tls.ino  10_output.ino  15_light.ino  20_light.ino  25_monitor.ino  30_main_base.ino  31_main_wifi.ino  32_main_mqtt.ino  32_main_sntp.ino  33_main_mqtt.ino  40_misc.ino  42_monitor.ino  45_misc.ino  README.md  arduino.ino  trusted_ca_certs.h
brain/: .gitignore  README.md  pyproject.toml  requirements.txt  sms_api.py
brain/.run/: dev.run.xml  fail-dns.run.xml  package.run.xml
brain/environments/: fail-auth.env  fail-dns.env  fail-host.env  fail-port.env  fail-tls.env
brain/src/gcn_manager/: __init__.py  __main__.py  app.py  backoff.py  brain.py  constants.py  mqtt.py  notifier.py  notifiers.py
main/: Kconfig.projbuild  main.c
nodejs/: README.md  credentials.js.example  gcn.js  gcn.service
